docs-archive/apache-airflow-providers-amazon/9.36.0/_sources/_api/tests/system/amazon/aws/example_glue/index.rst.txt
tests.system.amazon.aws.example_glue
====================================

.. py:module:: tests.system.amazon.aws.example_glue


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_glue.DAG_ID
   tests.system.amazon.aws.example_glue.ROLE_ARN_KEY
   tests.system.amazon.aws.example_glue.sys_test_context_task
   tests.system.amazon.aws.example_glue.EXAMPLE_CSV
   tests.system.amazon.aws.example_glue.EXAMPLE_SCRIPT
   tests.system.amazon.aws.example_glue.test_context
   tests.system.amazon.aws.example_glue.test_run


Functions
---------

.. autoapisummary::

   tests.system.amazon.aws.example_glue.delete_glue_resources
   tests.system.amazon.aws.example_glue.verify_crawler_description


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_glue'


.. py:data:: ROLE_ARN_KEY
   :value: 'ROLE_ARN'


.. py:data:: sys_test_context_task

.. py:data:: EXAMPLE_CSV
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """product,value
      apple,0.5
      milk,2.5
      bread,4.0
      """

   .. raw:: html

      </details>



.. py:data:: EXAMPLE_SCRIPT
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """
      from pyspark.context import SparkContext
      from awsglue.context import GlueContext
      
      glueContext = GlueContext(SparkContext.getOrCreate())
      datasource = glueContext.create_dynamic_frame.from_catalog(
                   database='{db_name}', table_name='input')
      print('There are %s items in the table' % datasource.count())
      
      datasource.toDF().write.format('csv').mode("append").save('s3://{bucket_name}/output')
      """

   .. raw:: html

      </details>



.. py:function:: delete_glue_resources(job_name, db_name)

.. py:function:: verify_crawler_description(crawler_name, expected_description)

.. py:data:: test_context
   :value: None


.. py:data:: test_run

